--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "main": "numerology_report.js",
     "scripts": {
         "start": "node server.js",
+        "dev": "node server.js",
+        "build": "echo 'No build step needed for static files'",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
