--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "author": "",
     "dependencies": {
         "@google/genai": "latest",
-        "dotenv": "^16.4.5",
+        "chart.js": "^4.5.0",
+        "dotenv": "^17.2.0",
         "express": "^4.19.2"
     }
 }
